--- a/cartwishlistservice.properties
+++ b/cartwishlistservice.properties
@@ -11,6 +11,7 @@ springdoc.api-docs.enabled=true
 spring.h2.console.enabled=false
 
 # Circuit Breaker Configuration
+feign.circuitbreaker.enabled=true
 resilience4j.circuitbreaker.instances.auth-service.failure-rate-threshold=50
 resilience4j.circuitbreaker.instances.auth-service.wait-duration-in-open-state=10s
 resilience4j.circuitbreaker.instances.auth-service.sliding-window-size=5
