--- a/application.properties
+++ b/application.properties
@@ -18,3 +18,7 @@ logging.level.com.megamart=INFO
 logging.level.feign=DEBUG
 logging.level.org.springframework.cloud=INFO
 
+#Swagger
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
