--- a/application.properties
+++ b/application.properties
@@ -7,7 +7,7 @@ eureka.instance.prefer-ip-address=true
 
 # --- Shared Database Configuration ---
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=730524
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -18,7 +18,58 @@ logging.level.com.megamart=INFO
 logging.level.feign=DEBUG
 logging.level.org.springframework.cloud=INFO
 
-#Swagger
-springdoc.api-docs.path=/api-docs
+# Swagger Configuration
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
 
+
+
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=health,circuitbreakers
+management.endpoint.health.show-details=always
+#Resilience Circuit Breaker
+resilience4j.circuitbreaker.instances.product-service.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.product-service.eventConsumerBufferSize=10
+resilience4j.circuitbreaker.instances.product-service.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.product-service.minimumNumberOfCalls=1
+resilience4j.circuitbreaker.instances.product-service.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.product-service.waitDurationInOpenState=6s
+resilience4j.circuitbreaker.instances.product-service.permittedNumberOfCallsInHalfOpenState=1
+resilience4j.circuitbreaker.instances.product-service.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.product-service.slidingWindowType=COUNT_BASED
+
+
+resilience4j.circuitbreaker.instances.auth-service.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.auth-service.eventConsumerBufferSize=10
+resilience4j.circuitbreaker.instances.auth-service.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.auth-service.minimumNumberOfCalls=1
+resilience4j.circuitbreaker.instances.auth-service.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.auth-service.waitDurationInOpenState=6s
+resilience4j.circuitbreaker.instances.auth-service.permittedNumberOfCallsInHalfOpenState=1
+resilience4j.circuitbreaker.instances.auth-service.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.auth-service.slidingWindowType=COUNT_BASED
+
+
+#Resilience Circuit Breaker
+resilience4j.circuitbreaker.instances.user-service.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.user-service.eventConsumerBufferSize=10
+resilience4j.circuitbreaker.instances.user-service.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.user-service.minimumNumberOfCalls=1
+resilience4j.circuitbreaker.instances.user-service.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.user-service.waitDurationInOpenState=6s
+resilience4j.circuitbreaker.instances.user-service.permittedNumberOfCallsInHalfOpenState=1
+resilience4j.circuitbreaker.instances.user-service.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.user-service.slidingWindowType=COUNT_BASED
+
+#Resilience Circuit Breaker
+resilience4j.circuitbreaker.instances.cart-service.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.cart-service.eventConsumerBufferSize=10
+resilience4j.circuitbreaker.instances.cart-service.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.cart-service.minimumNumberOfCalls=1
+resilience4j.circuitbreaker.instances.cart-service.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.cart-service.waitDurationInOpenState=6s
+resilience4j.circuitbreaker.instances.cart-service.permittedNumberOfCallsInHalfOpenState=1
+resilience4j.circuitbreaker.instances.cart-service.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.cart-service.slidingWindowType=COUNT_BASED
