--- a/gateway.properties
+++ b/gateway.properties
@@ -1,6 +1,6 @@
 server.port=9092
 
-# --- Gateway MVC Route Configuration (CORRECTED) ---
+# --- Gateway MVC Route Configuration ---
 spring.cloud.gateway.server.webmvc.routes[0].id=auth-service
 spring.cloud.gateway.server.webmvc.routes[0].uri=lb://auth-service
 spring.cloud.gateway.server.webmvc.routes[0].predicates[0]=Path=/auth-service/**
